2012-11-08 Sancho Lerena <slerena@artica.es>

	* include/functions_config.php: Fixed a XSS in login :-O. Thanks 
	to gobejishvili for reporting.

2012-11-08 Miguel de Dios <miguel.dedios@artica.es>
	
	* operation/events/events.php: cleaned source code style.
	
	* operation/events/events_list.php,
	godmode/events/event_edit_filter.php: added widgets for to filter
	the events by tags with the events or and tags without the
	events.
	
	* include/functions_tags.php: cleaned source code style, and
	clarifity the function "tags_search_tag". And add the function
	"tags_get_all_tags".
	
	MERGED FROM THE TRUNK.

2012-11-07 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/alerts/configure_alert_command.php, index.php: cleaned
	source code style.
	
	* godmode/alerts/alert_commands.php: fixed the check the name of
	command that it did not make the update the data.

2012-11-04 Miguel de Dios <miguel.dedios@artica.es>
	
	* operation/agentes/status_monitor.php: improved the page status
	monitor, show in another column the tags and added a select box with
	the tags in user in the filter form.
	
	Pending task: #3581578
	
	MERGED FROM THE TRUNK.

2012-10-29 Miguel de Dios <miguel.dedios@artica.es>
	
	* extensions/update_manager.php: silenced the notice PHP message
	when it has connection to internet.
	
	Fixes: #3560632

2012-10-26 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_api.php: fixed the function
	"api_set_apply_all_policies".
	
	Fixes: #3576289

2012-10-25 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/setup/setup.php, godmode/setup/setup_visuals.php,
	include/functions_api.php, include/functions_reporting.php: cleaned
	source code style.
	
	* install.php fixed the installation on DBs with names as for
	example "name1.name2".
	
	Fixes: #3573766
	
	MERGED FROM TRUNK

2012-10-25  Sergio Martin <sergio.martin@artica.es>

	* include/functions_visual_map.php
	operation/visual_console/render_view.php
	operation/gis_maps/render_view.php